<resources>
    <string name="app_name">My Map</string>
    <string name="title_activity_maps">Map</string>

    <!--Hint-->
    <string name="hint_email">email</string>
    <string name="hint_pass_confirm">confirm password</string>
    <string name="hint_new_password">new password</string>
    <string name="hint_password">password</string>
    <string name="hint_username">username</string>
    <string name="hint_full_name">full-name</string>
    <string name="hint_phone">phone number</string>
    <string name="hint_gender">gender</string>

    <!--  Button's Text  -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_back">Back</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit_profile">Edit your profile</string>

    <string name="txt_edit_avatar"><u>Choose your profile avatar</u></string>
    <string name="txt_skip"><u>Skip >></u></string>

    <string name="btn_email_method">Continue with personal Email</string>
    <string name="btn_google_method">Continue with Google</string>
    <string name="btn_anonymous_method">Try app like a Guest</string>

    <!-- Dialog Strings -->
    <string name="general_positive_button">OK</string>
    <string name="general_negative_button">Cancel</string>

    <!-- Responding Messages -->
    <string name="error_title">Oops!</string>
    <string name="error_message">Something went wrong! Please try again.</string>

    <string name="error_guest">"This feature is not support Guest User"</string>

    <string name="internet_error_title">Internet Error!</string>
    <string name="internet_error_message">Do you want to go to wifi setting?</string>

    <string name="location_error_title">GPS is turn off!</string>
    <string name="location_error_message">Please turn it on to continue using application!</string>

    <!-- Menu Title -->
    <string name="search_btn_menu_title">Search</string>
    <string name="show_covid_menu_title">Show Covid-19 Areas</string>
    <string name="show_friends_menu_title">Show All Users Location</string>
    <string name="home_menu_title">Map</string>
    <string name="notification_menu_title">Notification</string>
    <string name="message_menu_title">Search</string>
    <string name="profile_menu_title">Profile</string>

    <string name="invalid_email">This email is invalid! Please try another.</string>
    <string name="invalid_password">Password must be more than or equal to 6 letters!</string>
    <string name="invalid_username">This username is invalid! Please try another.</string>
    <string name="invalid_phone_number">This phone number is invalid! Please try another.</string>
    <string name="password_matching_error">Password do not match! Please try another.</string>
    <string name="empty_field_required">All fields are required!!</string>

    <string name="login_failed_title">Login Failed </string>
    <string name="conflict_email_message">"This email was signed in with another method! Please check it or try different one" </string>
    <string name="general_failed_message">Something went wrong! Please try again </string>
    <string name="login_success">Login Successfully</string>

    <string name="register_failed_title">Register Failed</string>
    <string name="register_fail_message">Something went wrong! Please try again.</string>
    <string name="register_success">Register Successfully</string>

    <!-- Facebook String -->
    <string name="facebook_app_id">541237316581533</string>
    <string name="fb_login_protocol_scheme">fb541237316581533</string>
    <string name="google_logout_dialog_message">You\'re about to log out, Do you want to revoke your google account too?</string>
    <string name="revoke_selector"><i>Click me to make your decision</i></string>
    <string name="revoke_option1">Yes, Please!</string>
    <string name="revoke_option2">No, Keep me sign in!</string>
    <string name="txt_id">Your ID:</string>

    <string name="btn_send_request">Send Request</string>
    <string name="btn_waiting_respond">Waiting Respond</string>
    <string name="btn_following">Following</string>

    <!-- Facebook String -->
    <string name="developing_feature_title">Respond!</string>
    <string name="developing_feature_content">This feature is being developed</string>
    <string name="title_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear_all_marker">Clear All marker</string>
    <string name="about_menu_title">About</string>
    <string name="choose_gender">Choose your gender...</string>
    <string name="apply_string">Apply</string>
    <string name="title_distance">Distance between two of you</string>
    <string name="title_other_info">Other Informations</string>

    <string name="km_unit">km</string>
    <string name="meter_unit">m</string>

</resources>
