<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp">

    <ImageView
        android:layout_width ="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/main_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:padding="10dp"
            android:id="@+id/edt_username"
            android:inputType="textImeMultiLine|textEmailAddress"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_count"
                android:text="0"
                android:textColor="@color/hintDefault"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username_min_val_required"
                android:text="/6+"
                android:textColor="@color/hintDefault"/>

        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:padding="10dp"
            android:id="@+id/edt_email"
            android:inputType="textImeMultiLine|textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:padding="10dp"
            android:id="@+id/edt_phone_number"
            android:inputType="textImeMultiLine|phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_password"
            android:id="@+id/edt_new_password"
            android:padding="10dp"
            android:inputType="textImeMultiLine|textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_password_count"
                android:text="0"
                android:textColor="@color/hintDefault"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_min_val_required"
                android:text="/6+"
                android:textColor="@color/hintDefault"/>

        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass_confirm"
            android:id="@+id/edt_pass_confirm"
            android:padding="10dp"
            android:inputType="textImeMultiLine|textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--    <Button-->
<!--        android:id="@+id/btn_register"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="15dp"-->
<!--        android:background="@drawable/button_background"-->
<!--        android:text="@string/btn_register"-->
<!--        android:textColor="@color/colorPrimaryDark"-->
<!--        android:textStyle="italic"/>-->

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:text="@string/btn_register"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btn_back"
        android:id="@+id/btn_back"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/button_background"
        android:textStyle="italic"/>

</LinearLayout>