<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_user_id_hidden"
        android:visibility="gone"/>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/image_profile"
        android:scaleType="fitCenter"
        app:civ_border_color="#000"
        app:civ_border="true"
        app:civ_border_width="1dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/image_profile"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="username"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="id" />

    </LinearLayout>

    <Button
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@drawable/button_background"
        android:padding="5dp"
        android:id="@+id/btn_send_request"
        android:text="@string/btn_send_request"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true" />

    <Button
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@drawable/button_request"
        android:id="@+id/btn_waiting_respond"
        android:padding="5dp"
        android:text="@string/btn_waiting_respond"
        android:textColor="@color/colorFireBrick"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@drawable/button_background"
        android:padding="5dp"
        android:id="@+id/btn_following"
        android:text="@string/btn_following"
        android:textAllCaps="false"
        android:textColor="@color/hintDefault"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>

</RelativeLayout>