<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:orientation="vertical"
        android:id="@+id/method_layout">

        <ImageView
            android:layout_width ="200dp"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:layout_marginBottom="5dp"
            android:src="@drawable/main_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/btn_email_method"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:drawableStart="@drawable/ic_email"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:id="@+id/btn_email_phone_method"/>

<!--            <com.google.android.gms.common.SignInButton-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/button_background"/>-->

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/btn_google_method"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:drawableStart="@drawable/google_logo"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:id="@+id/btn_google_method"/>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:background="@color/com_facebook_blue"
                android:gravity="center">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btn_facebook_method"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"/>

            </LinearLayout>

            <Button
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/btn_anonymous_method"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:drawableStart="@drawable/google_logo"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:id="@+id/btn_anonymous_method"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">
<!--        android:visibility="invisible"-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:background="@drawable/dialog_view_background"
            android:orientation="vertical"
            android:id="@+id/login_layout">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                android:background="@drawable/button_background"
                android:id="@+id/img_view_arrow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:padding="15dp"
                        android:id="@+id/edt_email"
                        android:inputType="textImeMultiLine|textEmailAddress"
                        android:layout_marginBottom="15dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="end">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:id="@+id/edt_password"
                        android:padding="15dp"
                        android:inputType="textImeMultiLine|textPassword"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_login_password_count"
                            android:text="0"
                            android:textColor="@color/hintDefault" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_login_min_val_required"
                            android:text="/6+"
                            android:textColor="@color/hintDefault"/>

                    </LinearLayout>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background"
                    android:text="@string/btn_login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="italic" />

<!--                <Button-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/btn_register"-->
<!--                    android:id="@+id/btn_jump_to_register"-->
<!--                    android:layout_marginTop="15dp"-->
<!--                    android:textColor="@color/colorPrimaryDark"-->
<!--                    android:background="@drawable/button_background"-->
<!--                    android:textStyle="italic"/>-->

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register"
                    android:id="@+id/btn_jump_to_register"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/button_background"
                    android:textStyle="italic"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>